- Added buildscripts to GIT (help wanted with building!) -  Extracted some file logic from ConfigManager to FileUtils